approval, pelaksanaan pengadaan terbuka

--- a/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
@@ -421,7 +421,7 @@
                                                                         </div>
                                                                     </div>
                                                                     <hr />
-                                                                    <div class="row kehadiran-kandidat">
+                                                                    <div class="row pendaftaran-kandidat">
 
                                                                     </div>
 
@@ -1355,7 +1355,7 @@
     <script src="dist/js/pengadaan-terbuka-detail.js"></script>
     <script src="dist/js/pelaksanaan-terbuka.js"></script>
     <script src="dist/js/menu.js"></script>
-    <script src="dist/js/berita-acara.js"></script>
+    <script src="dist/js/berita-acara-terbuka.js"></script>
     <script src="dist/js/rubah-personil.js"></script>
     <script src="dist/js/riwayat-pengadaan.js"></script>
     <script></script>
