approval persetujuan pemenang, list, create,dll

--- a/Reston.EProc.Runner.IIS/View/approval-perencanaan-belum-disetujui.html
+++ b/Reston.EProc.Runner.IIS/View/approval-perencanaan-belum-disetujui.html
@@ -127,7 +127,7 @@
                                 </div><!-- /.box-header -->
                                 <div class="box-body">
                                     <div class="form-group col-md-12">
-                                        <label class="title"><h3>Dokumen Pengadaan yang Sudah di Setujui</h3></label>
+                                        <label class="title"><h3>Dokumen Pengadaan yang Butuh Persetujuan</h3></label>
                                     </div>
                                     <div class="col-md-10" style="margin-left: 60px;">
                                         <table class="table table-bordered table-striped table-responsive" id="tbl-approval" style="margin-top:20px; ">
