js pengadaan terbuka, MTF_x

--- a/Reston.EProc.Runner.IIS/View/rks.html
+++ b/Reston.EProc.Runner.IIS/View/rks.html
@@ -157,6 +157,7 @@
 			<!-- Default box -->
 			<input type="hidden" id="pengadaanId" />
              <input type="hidden" id="region" />
+             <input type="hidden" id="aturan-pengadaan" />
 			 <div id="page-content" class="box box-primary box-white" >
 				<div class="box-body ">	
 					<div class="row">
