--- a/Reston.EProc.Runner.IIS/View/pengadaan-list.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-list.html
@@ -135,7 +135,7 @@
             <section class="content">
                 <div class="row">
                     <div class="col-md-10">
-                        <div id="perlu_perhatian">
+                        <div id="perlu_perhatian" style="display:none">
                             <div class="box box-white">
                                 <div class="box-header with-border">
                                     <h3 class="box-title text-blue-mtf cursor-pointer perhatian">PERLU PERHATIAN</h3>
