--- a/Reston.EProc.Runner.IIS/View/approval.html
+++ b/Reston.EProc.Runner.IIS/View/approval.html
@@ -126,31 +126,31 @@
                                     </br>
                                     <div class="form-group col-md-3">
                                         <div class="input-group date">
-                                    			<h3 class="box-title text-blue-mtf cursor-pointer repository" style="margin-left: 60px; font-weight: bold;">Lists To Do !</h3>
-                                        	</div>
-                                    	</div>
+                                            <h3 class="box-title text-blue-mtf cursor-pointer repository" style="margin-left: 60px; font-weight: bold;">Lists To Do !</h3>
+                                        </div>
+                                    </div>
                                     </br></br></br></br>
                                     <div class="head">
                                         <table class="table" style="border-style:none; width:600px; min-height:100px; margin-left:110px;">
                                             <tr>
                                                 <td class="rata_kiri text-bold">Dokumen Pengadaan yang Butuh Persetujuan</td>
                                                 <td class="tengah text-bold"><a href="approval-perencanaan-belum-disetujui.html" id="persetujuan-pengadaan"></a></td>
-                                                                                               
+
                                             </tr>
                                             <tr>
                                                 <td class="rata_kiri text-bold">Dokumen Pengadaan yang Sudah di Setujui</td>
                                                 <td class="tengah text-bold"><a href="approval-perencanaan-sudah-disetujui.html" id="pengadaan-disetujui"></a></td>
-                                                                                               
+
                                             </tr>
                                             <tr>
                                                 <td class="rata_kiri text-bold">Dokumen Persetujuan Pemenang yang Butuh Persetujuan</td>
-                                                <td class="tengah text-bold"><a href="approval-persetujuan-pemenang-belum-disetujui.html" id="persetujuan-pemenang" ></a></td>
-                                                                                               
+                                                <td class="tengah text-bold"><a href="approval-persetujuan-pemenang-belum-disetujui.html" id="persetujuan-pemenang"></a></td>
+
                                             </tr>
                                             <tr>
                                                 <td class="rata_kiri text-bold">Dokumen Persetujuan Pemenang yang Sudah di Setujui</td>
-                                                <td style="text-align:center; color:black; font-weight:bold;"><a href="approval-persetujuan-pemenang-sudah-disetujui.html"  id="pemenang-disetujui"></a></td>
-                                                                                               
+                                                <td style="text-align:center; color:black; font-weight:bold;"><a href="approval-persetujuan-pemenang-sudah-disetujui.html" id="pemenang-disetujui"></a></td>
+
                                             </tr>
                                             <tr>
                                                 <td class="rata_kiri text-bold">Update Status Proyek</td>
@@ -159,21 +159,21 @@
                                             </tr>
                                             <tr>
                                                 <td class="rata_kiri text-bold">Proyek Monitoring</td>
-                                                <td style="text-align:center; color:black; font-weight:bold;"><a href="monitoring-selection.html">7</a></td>
+                                                <td style="text-align:center; color:black; font-weight:bold;" id="monitor-selection"><a href="monitoring-selection.html"></a></td>
 
                                             </tr>
                                         </table>
                                     </div>
                                     <!-- nav-tabs-custom -->
-                                    </div>
-                                </div><!-- /.box-body -->
-                            </div>
+                                </div>
+                            </div><!-- /.box-body -->
                         </div>
                     </div>
                 </div>
-            </section><!-- /.content -->
         </div>
-        <div class="control-sidebar-bg"></div>
+        </section><!-- /.content -->
+    </div>
+    <div class="control-sidebar-bg"></div>
 
     </div><!-- ./wrapper -->
 
@@ -222,26 +222,29 @@
     <script>
         //Date picker
         $('#datepicker').datepicker({
-          autoclose: true
+            autoclose: true
         });
     </script>
     <script>
         var persetujuan_pengadaan = 0;
         var pengadaan_disetujui = 0;
+        var monitor_selection = 5;
         $(function () {
             $("#persetujuan-pengadaan").text(0);
             $("#pengadaan-disetujui").text(0);
             $("#persetujuan-pemenang").text(0);
             $("#pemenang-disetujui").text(0);
+            $("#monitor-selection").text(0);
             $.ajax({
                 url: 'api/PengadaanE/ListCount',
                 method: "GET",
                 success: function (data) {
-                    if (data!=null) {
+                    if (data != null) {
                         $("#persetujuan-pengadaan").text(data.PengadaanButuhPerSetujuan);
                         $("#pengadaan-disetujui").text(data.PengadaanDiSetujui);
                         $("#persetujuan-pemenang").text(data.PemenangButuhPerSetujuan);
                         $("#pemenang-disetujui").text(data.PemenangDiSetujui);
+                        //$("#monitor-selection").text(data.MonitorSelection);
                     }
                 }
             });
