rks di rekanan, view rks di penilaian dan klarifikasi

--- a/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
+++ b/Reston.EProc.Runner.IIS/View/pengadaan-terbuka-detail.html
@@ -438,7 +438,7 @@
                                                                         <div class="col-md-4">
                                                                             <div class="form-group">
                                                                                 <label class="title">Tanggal Aanwijzing</label>
-                                                                                <input id="#next-aanwijing-dari" type="text" class="form-control dateJadwal  jadwal-pelaksanaan-aanwijzing-dari action-pelaksanaan">
+                                                                                <input id="next-aanwijing-dari" type="text" class="form-control dateJadwal  jadwal-pelaksanaan-aanwijzing-dari action-pelaksanaan">
                                                                             </div>
                                                                         </div>
                                                                     </div>
