--- a/Reston.EProc.Runner.IIS/View/rekanan-klarifikasi-harga.html
+++ b/Reston.EProc.Runner.IIS/View/rekanan-klarifikasi-harga.html
@@ -133,6 +133,7 @@
 													         <table id="example1" class="table table-bordered table-bordered table-hover" width="100%">
 														        <thead>
 														          <tr>
+                                                                    <th>Nama</th>
 															        <th>Item</th>
                                                                     <th>Keterangan Item</th>
 															        <th>Satuan</th>
